# learning-python

./: .gitignore  README.md  main.py  mutation-tests-report.html  pyproject.toml  tooling_notes.md
src/learning_python/: __init__.py
src/learning_python/pattern_matching/: pattern_matching.py
src/learning_python/test_coverage_and_mutations/: __init__.py  coverage_and_mutations.py
tests/: test_calculator.py
tests/lists/: lists_test.py
tests/numbers/: numbers_test.py
tests/pattern_matching/: pattern_matching_test.py
tests/sets/: sets_test.py
tests/strings/: strings_test.py
tests/test_coverage_and_mutations/: coverage_and_mutations_test.py
