[project]
name = "learning-python"
version = "0.1.0"
description = "Project to explore Python's possibilities"
readme = "README.md"
authors = [
    { name = "Maxime C.", email = "carlu.m@sfeir.com" }
]
requires-python = ">=3.12"
dependencies = []
classifiers = ["Private :: Do Not Upload"]

[dependency-groups]
dev = [
    "cosmic-ray>=8.4.1",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "ruff>=0.12.0",
]

[build-system]
requires = ["uv_build>=0.7.13,<0.8.0"]
build-backend = "uv_build"

[project.scripts]
learning-python = "learning_python:main"

[tool.ruff.lint]
extend-select = ["B"]

[tool.pytest.ini_options]
addopts = "--maxfail=1 --cov=learning_python"
console_output_style = "times"
empty_parameter_set_mark = "xfail"
minversion = "3.12"

[tool.coverage.run]
branch = "true"
omit = [
    "src/**/__init__.py"
]

[tool.coverage.report]
fail_under = "100"

[cosmic-ray]
module-path = "src"
timeout = 5.0
excluded-modules = [
    "src/**/__init__.py"
]
test-command = "uv run pytest -x"

[cosmic-ray.distributor]
name = "http"

[cosmic-ray.distributor.http]
worker-urls = ["http://localhost:9800", "http://localhost:9801"]