[project]
name = "learning-python"
version = "0.1.0"
description = "Project to explore Python's possibilities"
readme = "README.md"
authors = [
    { name = "Maxime CARLU", email = "carlu.m@sfeir.com" }
]
requires-python = ">=3.12"
keywords = [
    "software engineering",
]
classifiers = [
    "Private :: Do Not Upload",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
]
dependencies = []

[dependency-groups]
dev = [
    "cosmic-ray>=8.4.1",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "ruff>=0.12.0",
]

[project.urls]
repository = "https://github.com/carlu-m/learning-python"
documentation = "https://github.com/carlu-m/learning-python/blob/trunk/README.md"

[build-system]
requires = ["uv_build>=0.7.13,<0.8.0"]
build-backend = "uv_build"

[project.scripts]
learning-python = "learning_python:main"

[tool.ruff]
line-length = 79
indent-width = 4

[tool.ruff.lint]
exclude = ["tests/**"]
extend-select = [
    "A", # Python builtins
    "ANN", # Annotations
    "ARG", # Arguments
    "ASYNC", # Async
    "B",
    "BLE", # Bare except
    "C4", # Comprehensions
    "COM", # Commas
    "D", # Pydoc
    "DTZ", # Datetime
    "E", # pycodestyle errors
    "EM", # Error messages
    "ERA", # Commented out code
    "EXE", # Executables
    "F", # pyflakes
    "FBT", # Boolean traps
    "FIX", # Fix me, TODO, etc
    "INT", # String interpolation
    "ISC", # String concatenation
    "LOG", # Logging
    "G", # Logging
    "INP", # Namespaces
    "N", # PEP8 Naming
    "PERF", # Performance
    "PL", # pylint
    "Q", # Quotes
    "RET", # Return values
    "RUF", # ruff
    "S", # Security
    "SIM", # Simplify
    "T20", # Print
    "TRY", # Exceptions
    "W", # pycodestyle warnings
]
ignore = [
    "D211",
    "D213"
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.pytest.ini_options]
addopts = "--maxfail=1 --cov=learning_python"
console_output_style = "times"
empty_parameter_set_mark = "xfail"
minversion = "3.12"

[tool.coverage.run]
branch = "true"
omit = [
    "src/**/__init__.py"
]

[tool.coverage.report]
include_namespace_packages = true
fail_under = "100"

[cosmic-ray]
module-path = "src"
timeout = 5.0
excluded-modules = [
    "src/**/__init__.py"
]
test-command = "uv run pytest -x"

[cosmic-ray.distributor]
name = "http"

[cosmic-ray.distributor.http]
worker-urls = ["http://localhost:9800", "http://localhost:9801"]

[cosmic-ray.badge]
label = "mutation"
format = "%.2f %%"

[cosmic-ray.badge.thresholds]
80  = 'red'
90  = 'orange'
95 = 'yellow'
100 = 'green'